# SudokuSolver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
sudoku_solver/: __init__.py  cli.py  sudoku.py
tests/: test_cases.json  test_solve.py
