[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A command-line Sudoku solver with support for string, list, and numpy board formats."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = []
keywords = ["sudoku", "solver", "puzzle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sudoku-solve = "sudoku_solver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sudoku_solver*"]
